--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     </head>
     <body >
     	<header>Fantastic CV </header>
+        
+        <nav></nav>
+        
+        <article>
+            <section>
+             dfsdf   
+            </section>
+        </article>
 
     </body>
+
+    <footer>
+        <p>copyright ivan vodich</p>
+    </footer>
 </html>
