Class CV  main js css and index was prepare

--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
         <script src = "js\main.js" defer></script>
     </head>
     <body >
-    	<header>Fantastic CV </header>
+    	<header>
+            Fantastic CV 
+        </header>
         
-        <nav></nav>
+        <nav>
+        </nav>
         
-        <article>
-            <section>
-             dfsdf   
-            </section>
+        <article id = "article">
         </article>
-
     </body>
 
     <footer>
