js class was created for generate table in html. CSS: add shadow,set style for the table

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Fantastic CV</title>
         <meta charset = "utf-8" />
+        <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css\main.css" />
         <script src = "js\CV.js" defer></script>
         <script src = "js\main.js" defer></script>
@@ -12,10 +13,10 @@
             Fantastic CV 
         </header>
         
-        <nav>
-        </nav>
+        <nav>Menu</nav>
         
-        <article id = "article">
+        <article>
+            <table id = "CV"></table>
         </article>
     </body>
 
