added ability save CV to PDF and included nesassary js lib filfiles , white line in  css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset = "utf-8" />
         <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css\main.css" />
+        <script src = "js\jspdf.min.js" defer></script>
+        <script src = "js\html2canvas.min.js" defer></script>
         <script src = "js\CV.js" defer></script>
         <script src = "js\main.js" defer></script>
     </head>
@@ -13,7 +15,7 @@
             Fantastic CV 
         </header>
         
-        <nav>Menu</nav>
+        <nav id = "menu">Menu</nav>
         
         <article>
             <table id = "CV"></table>
