--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Fantastic CV</title>
         <meta charset = "utf-8" />
-        <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css\main.css" />
         <script src = "js\jspdf.min.js" defer></script>
         <script src = "js\html2canvas.min.js" defer></script>
@@ -15,7 +15,7 @@
             Fantastic CV 
         </header>
         
-        <nav id = "menu">Menu</nav>
+        <nav id = "menu"></nav>
         
         <article>
             <table id = "CV"></table>
