--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
         <meta charset = "utf-8" />
         <link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css\main.css" />
-        <script src = "js\jspdf.min.js" defer></script>
-        <script src = "js\html2canvas.min.js" defer></script>
+        <script src = "js\libs\jspdf.min.js" defer></script>
+        <script src = "js\libs\html2canvas.min.js" defer></script>
         <script src = "js\CV.js" defer></script>
+        <script src = "js\menuTools.js" defer></script>
+        <script src = "js\events.js" defer></script>
         <script src = "js\main.js" defer></script>
     </head>
     <body >
     	<header>
             Fantastic CV 
         </header>
-        
         <nav id = "menu"></nav>
         
         <article>
