--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <title>Fantastic CV</title>
         <meta charset = "utf-8" />
         <link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="css\main.css" />
+        <link rel="stylesheet" type="text/css" href="css\main.css"/>
         <script src = "js\libs\jspdf.min.js" defer></script>
         <script src = "js\libs\html2canvas.min.js" defer></script>
-        <script src = "js\CV.js" defer></script>
-        <script src = "js\menuTools.js" defer></script>
+        <script src = "js\TableCV.js" defer></script>
+        <script src = "js\MenuCV.js" defer></script>
         <script src = "js\events.js" defer></script>
         <script src = "js\main.js" defer></script>
     </head>
