--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Fantastic CV</title>
         <meta charset = "utf-8" />
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+        <!--link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'-->
         <link rel="stylesheet" type="text/css" href="css\main.css"/>
-        <script src = "js\libs\jspdf.min.js" defer></script>
+        <script src = "js\libs\jspdf.min.js" defer></script><!--defer  IE => 10-->
         <script src = "js\libs\html2canvas.min.js" defer></script>
         <script src = "js\TableCV.js" defer></script>
         <script src = "js\MenuCV.js" defer></script>
