--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
         <article>
             <table id = "CV"></table>
         </article>
-    </body>
 
+        <form id="registrationForm" class="body__registration-form">
+            <fieldset>
+                    <legend>Registration:</legend>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Enter your full name" />
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email address" />
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password"/>
+                    <input type="submit"  id="submit" value="Send message" />
+            </fieldset>
+        </form>
     <footer>
         <p>copyright ivan vodich</p>
     </footer>
+    </body>
 </html>
