--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <title>Fantastic CV</title>
         <meta charset = "utf-8" />
         <!--link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'-->
-        <link rel="stylesheet" type="text/css" href="css\main.css"/>
-        <script src = "js\libs\jspdf.min.js" defer></script><!--defer  IE => 10-->
-        <script src = "js\libs\html2canvas.min.js" defer></script>
-        <script src = "js\TableCV.js" defer></script>
-        <script src = "js\MenuCV.js" defer></script>
-        <script src = "js\main.js" defer></script>
-        <script src = "js\events.js" defer></script>
+        <link rel="stylesheet" type="text/css" href="styles\main.css"/>
+        <script src = "scripts\libs\jspdf.min.js" defer></script><!--defer  IE => 10-->
+        <script src = "scripts\libs\html2canvas.min.js" defer></script>
+        <script src = "scripts\TableCV.js" defer></script>
+        <script src = "scripts\MenuCV.js" defer></script>
+        <script src = "scripts\main.js" defer></script>
+        <script src = "scripts\events.js" defer></script>
     </head>
     <body >
     	<header>
