create new file FormCV.js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src = "scripts\libs\html2canvas.min.js" defer></script>
         <script src = "scripts\TableCV.js" defer></script>
         <script src = "scripts\MenuCV.js" defer></script>
+        <script src = "scripts\FormCV.js" defer></script>
         <script src = "scripts\main.js" defer></script>
         <script src = "scripts\events.js" defer></script>
     </head>
