succes save and load user data to DB

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
         <script src = "scripts\libs\jspdf.min.js" defer></script><!--defer  IE => 10-->
         <script src = "scripts\libs\html2canvas.min.js" defer></script>
         <script src = "scripts\TableCV.js" defer></script>
+        <script src = "scripts\loadData.js" defer></script>
+        <script src = "scripts\saveData.js" defer></script>
         <script src = "scripts\MenuCV.js" defer></script>
         <script src = "scripts\FormCV.js" defer></script>
         <script src = "scripts\main.js" defer></script>
         <script src = "scripts\events.js" defer></script>
+        <script src = "scripts\libs\md5_obj.js" defer></script>
     </head>
     <body >
     	<header>
