commit hello world2

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
         <title>Fantastic CV</title>
         <meta charset = "utf-8" />
         <!--link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'-->
-        <link rel="stylesheet" type="text/css" href="styles\main.css"/>
-        <script src = "scripts\libs\jspdf.min.js" defer></script><!--defer  IE => 10-->
-        <script src = "scripts\libs\html2canvas.min.js" defer></script>
-        <script src = "scripts\TableCV.js" defer></script>
-        <script src = "scripts\loadData.js" defer></script>
-        <script src = "scripts\saveData.js" defer></script>
-        <script src = "scripts\MenuCV.js" defer></script>
-        <script src = "scripts\FormCV.js" defer></script>
-        <script src = "scripts\LoadImage.js" defer></script>
-        <script src = "scripts\main.js" defer></script>
-        <script src = "scripts\events.js" defer></script>
-        <script src = "scripts\libs\md5_obj.js" defer></script>
+        <link rel="stylesheet" type="text/css" href=".\styles\main.css"/>
+        <script src = ".\scripts\libs\jspdf.min.js" defer></script><!--defer  IE => 10-->
+        <script src = ".\scripts\libs\html2canvas.min.js" defer></script>
+        <script src = ".\scripts\TableCV.js" defer></script>
+        <script src = ".\scripts\loadData.js" defer></script>
+        <script src = ".\scripts\saveData.js" defer></script>
+        <script src = ".\scripts\MenuCV.js" defer></script>
+        <script src = ".\scripts\FormCV.js" defer></script>
+        <script src = ".\scripts\LoadImage.js" defer></script>
+        <script src = ".\scripts\main.js" defer></script>
+        <script src = ".\scripts\events.js" defer></script>
+        <script src = ".\scripts\libs\md5_obj.js" defer></script>
     </head>
     <body >
     	<header>
