--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Fantastic CV</title>
         <meta charset = "utf-8" />
         <!--link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'-->
-        <link rel="stylesheet" type="text/css" href=".\styles\main.css"/>
+        <link rel="stylesheet" type="text/css" href="\styles\main.css"/>
         <script src = ".\scripts\libs\jspdf.min.js" defer></script><!--defer  IE => 10-->
         <script src = ".\scripts\libs\html2canvas.min.js" defer></script>
         <script src = ".\scripts\TableCV.js" defer></script>
