add custom event;

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src = "scripts\saveData.js" defer></script>
         <script src = "scripts\MenuCV.js" defer></script>
         <script src = "scripts\FormCV.js" defer></script>
+        <script src = "scripts\LoadImage.js" defer></script>
         <script src = "scripts\main.js" defer></script>
         <script src = "scripts\events.js" defer></script>
         <script src = "scripts\libs\md5_obj.js" defer></script>
@@ -28,7 +29,6 @@
         
         <footer>
             <p>copyright ivan vodich</p>
-            <input type="file" id="file_input">
         </footer>
     </body>
 </html>
