--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Fantastic CV</title>
+        <title>CV BUILDER</title>
         <meta charset = "utf-8" />
         <!--link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'-->
         <link rel="stylesheet" type="text/css" href="styles\main.css"/>
@@ -9,9 +9,11 @@
     </head>
     <body >
     	<header>
-            Fantastic CV 
+            Fantastic CV Builder 
         </header>
-        <nav id = "menu"></nav>
+
+        <nav id = "menu">
+        </nav>
         
         <article>
             <table id = "CV"></table>
