--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <title>CV BUILDER</title>
         <meta charset = "utf-8" />
         <!--link href='https://fonts.googleapis.com/css?family=Open+Sans&subset=latin,cyrillic' rel='stylesheet' type='text/css'-->
-        <link rel="stylesheet" type="text/css" href="styles\main.css"/>
-        <script data-main="scripts/main" src="scripts/require.js" defer></script>
+        <link rel="stylesheet" type="text/css" href="public/styles/main.css"/>
+        <script data-main="public/scripts/main" src="public/scripts/require.js" defer></script>
     </head>
     <body >
     	<header>
